Added feedback message to story page

--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -352,6 +352,17 @@ a.trail-story-title {
   }
 }
 
+.cta-new--blue {
+  background-color: #00638E;
+
+  .cta-new__text {
+    color: #fff;
+  }
+  .cta-new__btn--right {
+    border-color: #fff;
+  }
+}
+
 .is-open .cta-new__btn i {
   @include rotate(180deg);
 }
