--- a/event/app/views/story.scala.html
+++ b/event/app/views/story.scala.html
@@ -21,6 +21,7 @@
             @fragments.places(story)
             @fragments.pictures(story)
             @fragments.timeline(story)
+            @fragments.feedback()
         </div>
     }
 }
