--- a/common/app/assets/stylesheets/module/_site-message.scss
+++ b/common/app/assets/stylesheets/module/_site-message.scss
@@ -1,30 +1,23 @@
-.site-message{
-	background-color:#edede7;
-	margin:$baseline*3 $gutter 0;
-	padding:$baseline 9px $baseline*2;
-	border-top:2px solid #004179;
+.site-message {
+  margin: 32px 10px 0 10px;
+  background-color: #F2F2F2;
 }
-.site-message h2{
-	font-size:1.25em;
+
+.site-message__head {
+  min-height:44px;
+  margin: 0 2px;
+  font-family: $serifheadline;
+  font-weight: 600;
+  font-size: 1.8rem;
+  line-height: 2.2rem;
 }
-.site-message p{
-	margin-top:5px;
-	font-size:1em;
-	color:#545454;
-	font-family:$sans-serif;
-}
-.site-message a{
-	color:#004179;
-}
-.site-message .site-message-icon{
-	display:inline-block;
-	margin-right:5px;
-}
-.site-message-type-maintenance .site-message-icon{
-	@extend .i;
-	@extend .i-tool;
-}
-.svg .site-message-type-maintenance .site-message-icon{
-	@extend .i;
-	@extend .svg-i-tool;
+
+.site-message__body {
+  color: #000;
+  min-height: 88px;
+  font-family: $serif;
+  font-size: 1.8rem;
+  line-height: 2.0rem;
+  margin: 0 2px;
+  border-top: 1px solid #717272;
 }
