--- a/event/app/views/story.scala.html
+++ b/event/app/views/story.scala.html
@@ -9,13 +9,13 @@
             
             @fragments.latest(story, page, 2)
 
+            @fragments.explainer(story)
             @fragments.reaction(story)
 
             <div class="story-content">
                 @fragments.quote(story, 0)
-                @fragments.explainer(story)
-                @fragments.quote(story, 1)
                 @fragments.agents(story)
+                @fragments.quote(story, 1)
             </div>
 
             @fragments.places(story)
@@ -23,5 +23,7 @@
             @fragments.timeline(story)
             @fragments.feedback()
         </div>
+
+        <div class="js-popular" role="complementary"></div>
     }
 }
