moving image reference out of head.css and use Static (or they're relative to the page)

--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -1,4 +1,4 @@
-.i { background-image: url(../images/global/sprite.ddd252c6403d5720953b6f8b43d57296.png); background-repeat: no-repeat; display: inline-block; }
+.i { background-repeat: no-repeat; display: inline-block; }
 
 .i-arrow-blue-down { background-position: -8px -8px; width: 15px; height: 7.319px; }
 
