--- a/event/app/views/fragments/pictures.scala.html
+++ b/event/app/views/fragments/pictures.scala.html
@@ -2,49 +2,62 @@
 
 <!-- all the photos we have on this subject from the latest chapter -->
 
-@gallery(g: model.Gallery) = {
+@images(g: model.Gallery) = {
 
-        @g.images.zipWithRowInfo.map{ case(image, info) =>
-            <figure class="js-swipe__item story-picture">
-                <img class="js-swipe__img story-picture__img" src="@image.url" />
-                @image.caption.map { caption =>
-                    <figcaption class="js-swipe__text story-picture__caption">@StripHtmlTags(caption)</figcaption>
-                }
-            </figure>
-        }
+    @if(g.landscapes.nonEmpty && g.landscapes.size > 3) {
+        <div class="js-swipe__item story-picture--sheet">
+            @g.landscapes.take(5).map{ img =>
+                <img src="@img.url" />
+            }
+        </div>
+    }
+
+    @g.images.zipWithRowInfo.map{ case(image, info) =>
+        <figure class="js-swipe__item story-picture">
+            <img class="js-swipe__img story-picture__img" src="@image.url" />
+            @image.caption.map { caption =>
+                <figcaption class="js-swipe__text story-picture__caption">
+                    @StripHtmlTags(caption)
+                </figcaption>
+            }
+        </figure>
+    }
+}
+
+@controls(g: model.Gallery) = {
+    <div class="js-swipe__controls cta-new cta-new--dark h
+        @if(g.landscapes.nonEmpty && g.landscapes.size > 3) {js-swipe__controls--start}">
+        <button class="cta-new__btn cta-new__btn--left
+            @if(g.landscapes.nonEmpty && g.landscapes.size > 3) {h}" data-link-name="Prev">
+            <i class="i i-arrow-white-down cta-new__icn"></i>
+        </button>
+        <span class="cta-new__text @if(g.landscapes.isEmpty && g.landscapes.size < 3) {cta-new__text--center}">
+            View complete gallery
+        </span>
+        <button class="cta-new__btn cta-new__btn--right" data-link-name="Next">
+            <i class="i i-arrow-white-down cta-new__icn--right"></i>
+        </button>
+    </div>
 }
 
 
+@if(story.hasGalleries) {
+    @story.galleries.take(1).map { gallery =>
+        <section class="story-pictures h" data-link-name="Pictures">
+            <h2 class="story-title story-title--section story-title--white">
+                @story.labels.getOrElse("pictures", "In pictures")
+            </h2>
 
-@if(story.hasEvents) {
-    @story.events.take(1).map { event =>
-        @if(event.hasContent) {
-            <section class="story-pictures h" data-link-name="Pictures">
-                <h2 class="story-title story-title--section story-title--white">
-                    @story.labels.getOrElse("pictures", "In pictures")
-                </h2>
-
-                <div class="js-swipe">
-                    <div class="js-swipe__items">
-                        <div class="js-swipe__wrap">
-                            @event.content.map{
-                                case g: Gallery => { @gallery(g) }
-                                case _ => {}
-                            }
-                        </div>
-                    </div>
-
-                    <div class="js-swipe__controls cta-new cta-new--dark h">
-                        <button class="cta-new__btn cta-new__btn--left" data-link-name="Prev">
-                            <i class="i i-arrow-white-down cta-new__icn"></i>
-                        </button>
-                        <span class="cta-new__text cta-new__text--center"></span>
-                        <button class="cta-new__btn cta-new__btn--right" data-link-name="Next">
-                            <i class="i i-arrow-white-down cta-new__icn--right"></i>
-                        </button>
+            <div class="js-swipe">
+                <div class="js-swipe__items">
+                    <div class="js-swipe__wrap">
+                        @images(gallery)
                     </div>
                 </div>
-            </section>
-        }
+
+                @controls(gallery)
+
+            </div>
+        </section>
     }
 }
