handle video articles

--- a/event/app/views/fragments/latestWithContent.scala.html
+++ b/event/app/views/fragments/latestWithContent.scala.html
@@ -2,7 +2,7 @@
 
 @trail(content: Seq[model.Content], story: Story) = {
     @content.map{
-        case trail: Article => {
+        case trail @ (_: Article | _: Video) => {
             <li class="trail" data-link-name="trail">
 
                 @fragments.relativeDate(trail.webPublicationDate, trail.isLive, isFront=true)
