Changed video ad js to use new in-page ad object

--- a/video/app/views/fragments/videoBody.scala.html
+++ b/video/app/views/fragments/videoBody.scala.html
@@ -16,7 +16,7 @@
 
         @page.advert.map(_.toString).map{ ad =>
         <script>
-            guardian.videoAd = @Html(ad);
+            guardian.config.page.videoAd = @Html(ad);
         </script>
         }
 
