--- a/common/app/views/fragments/social.scala.html
+++ b/common/app/views/fragments/social.scala.html
@@ -10,14 +10,20 @@
             <a  class="social-btn"
                 data-link-name="social-fb"
                 href="http://m.facebook.com/dialog/feed?app_id=180444840287&display=touch&redirect_uri=@helper.urlEncode(url)&link=@helper.urlEncode(url)&ref=responsive">
-                <span>Facebook</span>
+                Facebook
+                <span class="fb logo-container">
+                    <span class="i-fb i logo"></span>
+                </span>
             </a>
        </li>
        <li class="twitter social-network">
             <a  class="social-btn"
                 data-link-name="social-twitter"
                 href="https://twitter.com/intent/tweet?text=@helper.urlEncode(page.webTitle)&url=@helper.urlEncode(url)">
-                <span>Twitter</span>
+                Twitter
+                <span class="twitter logo-container">
+                    <span class="i-twitter i logo"></span>
+                </span>
             </a>
         </li>
         <li class="gplus social-network">
@@ -25,7 +31,10 @@
             class="social-btn"
                 data-link-name="social-gplus" 
                 href="https://plus.google.com/share?url=@helper.urlEncode(url)&hl=en-GB&wwc=1">
-                <span>Google+</span>
+                Google+
+                <span class="gplus logo-container">
+                    <span class="i-gplus i logo"></span>
+                </span>
             </a>
         </li>
     </ul>
