--- a/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
+++ b/common/app/assets/stylesheets/theme/_global-icons-sprite.scss
@@ -18,56 +18,62 @@
 
 .i-ee-add-button { background-position: -144px -8px; width: 54px; height: 47px; }
 
-.i-filter-arrow-down { background-position: -212px -8px; width: 20px; height: 11.431px; }
+.i-fb { background-position: -212px -8px; width: 10.88px; height: 22.38px; }
 
-.i-filter-arrow-left { background-position: -232px -8px; width: 8.703px; height: 15px; }
+.i-filter-arrow-down { background-position: -222px -8px; width: 20px; height: 11.431px; }
 
-.i-filter-arrow-right { background-position: -240px -8px; width: 8.702px; height: 15px; }
+.i-filter-arrow-left { background-position: -242px -8px; width: 8.703px; height: 15px; }
 
-.i-filter-arrow-up { background-position: -248px -8px; width: 20px; height: 11.431px; }
+.i-filter-arrow-right { background-position: -250px -8px; width: 8.702px; height: 15px; }
 
-.i-fullscreen-toggle { background-position: -268px -8px; width: 12px; height: 12px; }
+.i-filter-arrow-up { background-position: -258px -8px; width: 20px; height: 11.431px; }
 
-.i-guardian-logo { background-position: -280px -8px; width: 107.667px; height: 20.125px; }
+.i-fullscreen-toggle { background-position: -278px -8px; width: 12px; height: 12px; }
 
-.i-image-inverted { background-position: -387px -8px; width: 12px; height: 9px; }
+.i-gplus { background-position: -290px -8px; width: 24.361px; height: 20.535px; }
 
-.i-image-white { background-position: -399px -8px; width: 12px; height: 9px; }
+.i-guardian-logo { background-position: -314px -8px; width: 107.667px; height: 20.125px; }
 
-.i-image { background-position: -411px -8px; width: 12px; height: 9px; }
+.i-image-inverted { background-position: -421px -8px; width: 12px; height: 9px; }
 
-.i-livequote-after { background-position: -423px -8px; width: 37px; height: 20px; }
+.i-image-white { background-position: -433px -8px; width: 12px; height: 9px; }
 
-.i-livequote-before { background-position: -460px -8px; width: 37px; height: 20px; }
+.i-image { background-position: -445px -8px; width: 12px; height: 9px; }
 
-.i-menu-active { background-position: -497px -8px; width: 18px; height: 12px; }
+.i-livequote-after { background-position: -457px -8px; width: 37px; height: 20px; }
 
-.i-menu { background-position: -515px -8px; width: 18px; height: 12px; }
+.i-livequote-before { background-position: -494px -8px; width: 37px; height: 20px; }
 
-.i-more-arrow { background-position: -533px -8px; width: 10px; height: 8px; }
+.i-menu-active { background-position: -531px -8px; width: 18px; height: 12px; }
 
-.i-powered-by-ee { background-position: -497px -20px; width: 68px; height: 31px; }
+.i-menu { background-position: -549px -8px; width: 18px; height: 12px; }
 
-.i-quote-marks { background-position: -212px -55px; width: 64px; height: 32px; }
+.i-more-arrow { background-position: -567px -8px; width: 10px; height: 8px; }
 
-.i-red-card { background-position: -290px -55px; width: 9px; height: 12px; }
+.i-powered-by-ee { background-position: -222px -28px; width: 68px; height: 31px; }
 
-.i-search-blue { background-position: -299px -55px; width: 14px; height: 14px; }
+.i-quote-marks { background-position: -304px -28px; width: 64px; height: 32px; }
 
-.i-search { background-position: -313px -55px; width: 14px; height: 14px; }
+.i-red-card { background-position: -382px -28px; width: 9px; height: 12px; }
 
-.i-sport-arrow-small { background-position: -327px -55px; width: 5.802px; height: 10px; }
+.i-search-blue { background-position: -391px -28px; width: 14px; height: 14px; }
 
-.i-sport-arrow { background-position: -332px -55px; width: 8.703px; height: 15px; }
+.i-search { background-position: -405px -28px; width: 14px; height: 14px; }
 
-.i-story-quote { background-position: -340px -55px; width: 49px; height: 25px; }
+.i-sport-arrow-small { background-position: -419px -28px; width: 5.802px; height: 10px; }
 
-.i-tool { background-position: -389px -55px; width: 13px; height: 13px; }
+.i-sport-arrow { background-position: -424px -28px; width: 8.703px; height: 15px; }
 
-.i-top-stories-active { background-position: -402px -55px; width: 16px; height: 16px; }
+.i-story-quote { background-position: -432px -28px; width: 49px; height: 25px; }
 
-.i-top-stories { background-position: -418px -55px; width: 16px; height: 16px; }
+.i-tool { background-position: -481px -28px; width: 13px; height: 13px; }
 
-.i-witness-logo { background-position: -434px -55px; width: 119px; height: 16px; }
+.i-top-stories-active { background-position: -494px -28px; width: 16px; height: 16px; }
 
-.i-yellow-card { background-position: -553px -55px; width: 9px; height: 12px; }
+.i-top-stories { background-position: -510px -28px; width: 16px; height: 16px; }
+
+.i-twitter { background-position: -526px -28px; width: 23.28px; height: 18.99px; }
+
+.i-witness-logo { background-position: -382px -53px; width: 119px; height: 16px; }
+
+.i-yellow-card { background-position: -501px -53px; width: 9px; height: 12px; }
