--- a/common/app/assets/stylesheets/module/_media.scss
+++ b/common/app/assets/stylesheets/module/_media.scss
@@ -1,16 +1,16 @@
 /* ====== media (nicole sullivan's OOCSS) ====== */
 
-.media, .media-body {
+.media, .media__body {
     overflow: hidden; 
     _overflow: visible; 
     zoom: 1;
 }
 
-.media-img {
+.media__img {
     float: left; 
     margin-right: 15px;
 }
 
-.media-img img {
+.media__img img {
     display: block;
 }
