--- a/front/app/views/fragments/frontBlock.scala.html
+++ b/front/app/views/fragments/frontBlock.scala.html
@@ -10,7 +10,7 @@
         }
 	}
 
-    <div class="trailblock front-trailblock-@SafeName(block.description) @if(block.description.showMore){ js-show-more}"
+    <div class="trailblock front-trailblock-@SafeName(block.description) grid-col @if(block.description.showMore){ js-show-more}"
         data-count="@block.description.numItemsVisible"
         data-section-id="@block.description.id">
 
