--- a/event/app/views/fragments/timeline.scala.html
+++ b/event/app/views/fragments/timeline.scala.html
@@ -94,7 +94,7 @@
 @if(story.hasEvents) {
     <section class="story-timeline" data-link-name="Timeline">
         <h2 class="story-title story-title--section">
-            @story.labels.getOrElse("timeline", "The story so far")
+            @story.labels.getOrElse("timeline", "Summary")
         </h2>
 
         <div class="js-timeline timeline">
