--- a/event/app/views/story.scala.html
+++ b/event/app/views/story.scala.html
@@ -12,7 +12,7 @@
 
         @if(story.hasLiveContent) {
             <ol class="tabs js-tabs">
-                <li class="tabs-selected"><a href="#story" data-link-name="story">Summary</a></li>
+                <li class="tabs-selected"><a href="#story" data-link-name="story">The story so far</a></li>
                 <li><a href="#live" data-link-name="live">Live</a></li>
             </ol>
         }
