changed 'Reaction' text to 'Comment'

--- a/event/app/views/fragments/reaction.scala.html
+++ b/event/app/views/fragments/reaction.scala.html
@@ -4,7 +4,7 @@
 
     <section class="story-reactions">
         <h2 class="story-title story-title--section story-title--indent">
-            @story.labels.getOrElse("reaction", "Reaction")
+            @story.labels.getOrElse("reaction", "Comment")
         </h2>
         <ul class="unstyled">
             @story.reaction.take(4).map{ a => 
