fixed thumbnail trail image

--- a/common/app/assets/stylesheets/module/trails/_trail.scss
+++ b/common/app/assets/stylesheets/module/trails/_trail.scss
@@ -74,6 +74,7 @@
  ========================================================================== */
 .trail--thumbnail {
   .media__img {
+    width: 9.625em;
     padding-right: 14px;
     margin-right: 0px;
   }
